Fix: jump to startpage after logout

--- a/client/_layouts/app-layout-scrollable.less
+++ b/client/_layouts/app-layout-scrollable.less
@@ -11,6 +11,14 @@ a {
   position: relative;
 }
 
+header .user.menu {
+  padding:0;
+  a {
+    display: block;
+    padding:5px;
+  }
+}
+
 header.main-header {
   width: 100%;
   height: 110px;
@@ -67,6 +75,7 @@ header.main-header {
       .type-light;
       color: @color-text;
       letter-spacing: 0.02em;
+
 
       &:hover {
         .type-bold;
